--- a/install/Brewfile
+++ b/install/Brewfile
@@ -8,7 +8,7 @@ brew "coreutils"
 brew "diff-so-fancy"
 brew "dockutil"
 brew "fasd"
-brew "ffmpeg"
+# brew "ffmpeg"
 brew "gnu-sed"
 brew "goles/battery/battery"
 brew "grep"
