--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,8 +17,8 @@ jobs:
         if: startsWith(matrix.os, 'macos')
         run: |
           brew uninstall --force $(brew list --formula)
-          # brew cask uninstall --force $(brew list --cask)
-          brew cask uninstall --force firefox google-chrome
+          # brew uninstall --cask --force $(brew list --cask)
+          brew uninstall --cask --force firefox google-chrome
           brew cleanup --prune-prefix
           /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/uninstall.sh)"
           rm -rf "$NVM_DIR"
