Try to fix "Could not symlink bin/2to3"

--- a/install/Brewfile
+++ b/install/Brewfile
@@ -8,7 +8,7 @@ brew "coreutils"
 brew "diff-so-fancy"
 brew "dockutil"
 brew "fasd"
-# brew "ffmpeg"
+brew "ffmpeg"
 brew "gnu-sed"
 brew "goles/battery/battery"
 brew "grep"
@@ -22,6 +22,7 @@ brew "nano"
 brew "pandoc"
 brew "peco"
 brew "psgrep"
+brew "python"
 brew "shellcheck"
 brew "ssh-copy-id"
 brew "stow"
